edited MainWindow.xaml -> login window

--- a/inventoryManagementDesktopApplication/inventoryManagementDesktopApplication.csproj
+++ b/inventoryManagementDesktopApplication/inventoryManagementDesktopApplication.csproj
@@ -122,7 +122,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DatabaseConnection.cs" />
+    <Compile Include="database\DatabaseConnection.cs" />
+    <Compile Include="database\DatabaseManager.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
