--- a/inventoryManagementDesktopApplication/inventoryManagementDesktopApplication.csproj
+++ b/inventoryManagementDesktopApplication/inventoryManagementDesktopApplication.csproj
@@ -111,6 +111,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="inventoryWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -124,6 +128,9 @@
     </Compile>
     <Compile Include="database\DatabaseConnection.cs" />
     <Compile Include="database\DatabaseManager.cs" />
+    <Compile Include="inventoryWindow.xaml.cs">
+      <DependentUpon>inventoryWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
