changed login page design (MainWindow.xaml)

--- a/inventoryManagementDesktopApplication/inventoryManagementDesktopApplication.csproj
+++ b/inventoryManagementDesktopApplication/inventoryManagementDesktopApplication.csproj
@@ -164,5 +164,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\LogoRechteck_restored.jpeg" />
+    <Resource Include="images\Logo_Finger_restored.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
